Use PyPy3.10 instead of Python3

--- a/.github/workflows/test_on_merge.yml
+++ b/.github/workflows/test_on_merge.yml
@@ -11,15 +11,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python3
+    - name: Set up PyPy3.10
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: 'pypy3.10'
 
     - name: Set up environment
       run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install mypy
+        python -m pip install --upgrade pip
+        python -m pip install mypy
 
     - name: Run make test
       run: make test
